add tss and bugfix for older versions